--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -176,6 +176,10 @@
 	.#{$class}__select--small {
 		@include oFormsCommonSmall;
 	}
+
+	.#{$class}__select--small {
+		@include oFormsSelectSmall();
+	}
 }
 
 /// @access public
